--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,8 @@ header{
     font-size: 3rem;
     margin-right: 15px;
 }
-.nav-links a:hover{
-    background-color: grey;
+.nav-links a:hover,.main-account a:hover{
+    background-color: rgb(47,51,54);
     border-radius: 1000px;
 }
 .nav-links a:first-child{
@@ -65,6 +65,42 @@ header{
     color: white;
     font-weight: 500;
     border: 1px solid black;
+    transition-duration: .2s;
+}
+.tweet-button:hover{
+    background-color:rgba(29,155,240,.9);
+}
+.account-image{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    /* background-color: white; */
+}
+.main-account {
+    width: 100%;
+    height: 20%;
+    padding-top: 50px;
 
+}
+.main-account a{
+    display: flex;
+    justify-content: space-between;
+    padding: 8px 10px 8px 15px;
+    align-items: center;
+}
+.account-details{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 70%;
+    margin-left: 10px;
+    font-size: 1.5;
+    line-height: 20px;
+}
+.account-name{
+    font-weight: 700;
+    font-size: 1.2rem;
 
+}
+.account-handle{
+    color: grey;
 }
