--- a/header-styles.css
+++ b/header-styles.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
@@ -8,16 +9,17 @@
 
 html {
     font-size: 10px;
-    font-family:  'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
     color: white;
     font-weight: 400;
     line-height: 24px;
 }
-header{
+
+header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -26,38 +28,46 @@ header{
     height: 100%;
     position: fixed;
 }
-.nav-links{
+
+.nav-links {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 80%;
     justify-content: space-between;
 }
-.nav-links a{
+
+.nav-links a {
     display: flex;
     font-size: 2rem;
     padding: 8px 25px 8px 8px;
     width: fit-content;
     justify-content: space-between;
 }
-.nav-links a i{
+
+.nav-links a i {
     font-size: 3rem;
     margin-right: 15px;
 }
-.nav-links a:hover,.main-account a:hover{
-    background-color: rgb(47,51,54);
+
+.nav-links a:hover,
+.main-account a:hover {
+    background-color: rgb(47, 51, 54);
     border-radius: 1000px;
 }
-.nav-links a:first-child{
+
+.nav-links a:first-child {
     padding: 8px 8px;
 }
-.nav-links a:first-child i{
+
+.nav-links a:first-child i {
     margin: 0;
 }
-.tweet-button{
-    background-color:rgb(29,155,240);
+
+.tweet-button {
+    background-color: rgb(29, 155, 240);
     width: 90%;
-    height: 100px;
+    height: 50px;
     border-radius: 1000px;
     margin-top: 15px;
     cursor: pointer;
@@ -67,28 +77,33 @@ header{
     border: 1px solid black;
     transition-duration: .2s;
 }
-.tweet-button:hover{
-    background-color:rgba(29,155,240,.9);
+
+.tweet-button:hover {
+    background-color: rgba(29, 155, 240, .9);
 }
-.account-image{
+
+.account-image {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     /* background-color: white; */
 }
+
 .main-account {
     width: 100%;
     height: 20%;
     padding-top: 50px;
 
 }
-.main-account a{
+
+.main-account a {
     display: flex;
     justify-content: space-between;
     padding: 8px 10px 8px 15px;
     align-items: center;
 }
-.account-details{
+
+.account-details {
     display: flex;
     flex-direction: column;
     flex-basis: 70%;
@@ -96,11 +111,13 @@ header{
     font-size: 1.5;
     line-height: 20px;
 }
-.account-name{
+
+.account-name {
     font-weight: 700;
     font-size: 1.2rem;
 
 }
-.account-handle{
+
+.account-handle {
     color: grey;
 }
