--- a/main-feed-styles.css
+++ b/main-feed-styles.css
@@ -25,6 +25,7 @@ main {
     height: 55px;
     width: 100%;
     color: white;
+    background-color:#181A1B;
     font-size: 2rem;
     font-weight: 400;
     padding: 0 15px;
@@ -81,4 +82,50 @@ main {
     font-weight: 400;
     font-size: 1.5rem;
     margin-left: 60px;
+}
+.feed-tweet{
+    display: flex;
+    width: 100%;
+    /* this makes the height stretches as the content grows */
+    min-height: 100px;
+    padding: 12px 16px 0 16px;
+    border-top:1px solid rgb(47, 51, 54);
+    cursor: pointer;
+}
+.feed-tweet-details{
+    display:flex;
+    flex-direction: column;
+    width: 100%;
+    margin-left: 12px;
+}
+.feed-tweet i {
+    color:rgb(110,118,125);
+    font-size:2rem;
+
+}
+.tweeter-details{
+    display:flex;
+    align-items: flex-start;
+    font-size: 1.3rem;
+    justify-content: space-between;
+}
+.tweeter-name{
+    font-weight: 700px;
+
+}
+.tweeter-handle{
+    color:grey;
+    font-size: .99rem;
+    margin-left:3px;
+}
+.tweet-text{
+    font-size: 1.3rem;
+    width:100%;
+}
+.tweet-icons{
+    display:flex;
+    justify-content: space-between;
+    width: 100%;
+    margin:15px 0;
+    /* padding-right: 50px; */
 }
