--- a/main-feed-styles.css
+++ b/main-feed-styles.css
@@ -129,3 +129,34 @@ main {
     margin:15px 0;
     /* padding-right: 50px; */
 }
+.side-feed{
+    width:50%;
+    padding: 0 2%;
+}
+.search{
+    display: flex;
+    height: 55px;
+    max-width:355px;
+    position:sticky;
+    top:0;
+    padding-top: 5px;
+}
+.search input{
+    background-color: #212327;
+    border-radius: 9999px;
+    height: 45px;
+    width: 100%;
+    border: none;
+    padding-left: 30px;
+    font-size: 1.5rem;
+    font-weight: 400px;
+}
+.trending{
+    background-color: #212327;
+    display: flex;
+    flex-direction: column;
+    height: 370px;
+    max-width: 355px;
+    border-radius: 16px;
+    margin-top: 16px;
+}
