--- a/main-feed-styles.css
+++ b/main-feed-styles.css
@@ -25,7 +25,7 @@ main {
     height: 55px;
     width: 100%;
     color: white;
-    background-color:#181A1B;
+    background-color: #181A1B;
     font-size: 2rem;
     font-weight: 400;
     padding: 0 15px;
@@ -44,7 +44,8 @@ main {
     width: 50px;
     height: 50px;
 }
-.new-tweet-details{
+
+.new-tweet-details {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -52,17 +53,20 @@ main {
     width: 100%;
     margin-left: 12px;
 }
-.new-tweet-actions{
+
+.new-tweet-actions {
     display: flex;
     justify-content: between;
     align-items: center;
     height: 60px;
 }
-.new-tweet-actions ul{
+
+.new-tweet-actions ul {
     display: flex;
     list-style: none;
 }
-.new-tweet-details input{
+
+.new-tweet-details input {
     width: 100%;
     height: 24px;
     border: none;
@@ -70,78 +74,91 @@ main {
     outline: none;
     background-color: transparent;
 }
-.new-tweet-actions ul li{
+
+.new-tweet-actions ul li {
     margin-right: 12px;
-    color:#1c88d2 ;
+    color: #1c88d2;
     cursor: pointer;
 }
-.new-tweet-actions .tweet-button{
-    width:75px;
+
+.new-tweet-actions .tweet-button {
+    width: 75px;
     height: 35px;
-    margin:0;
+    margin: 0;
     font-weight: 400;
     font-size: 1.5rem;
     margin-left: 60px;
 }
-.feed-tweet{
+
+.feed-tweet {
     display: flex;
     width: 100%;
     /* this makes the height stretches as the content grows */
     min-height: 100px;
     padding: 12px 16px 0 16px;
-    border-top:1px solid rgb(47, 51, 54);
+    border-top: 1px solid rgb(47, 51, 54);
     cursor: pointer;
 }
-.feed-tweet-details{
-    display:flex;
+
+.feed-tweet-details {
+    display: flex;
     flex-direction: column;
     width: 100%;
     margin-left: 12px;
 }
+
 .feed-tweet i {
-    color:rgb(110,118,125);
-    font-size:2rem;
+    color: rgb(110, 118, 125);
+    font-size: 2rem;
 
 }
-.tweeter-details{
-    display:flex;
+
+.tweeter-details {
+    display: flex;
     align-items: flex-start;
     font-size: 1.3rem;
     justify-content: space-between;
 }
-.tweeter-name{
+
+.tweeter-name {
     font-weight: 700px;
 
 }
-.tweeter-handle{
-    color:grey;
+
+.tweeter-handle {
+    color: grey;
     font-size: .99rem;
-    margin-left:3px;
+    margin-left: 3px;
 }
-.tweet-text{
+
+.tweet-text {
     font-size: 1.3rem;
-    width:100%;
+    width: 100%;
 }
-.tweet-icons{
-    display:flex;
+
+.tweet-icons {
+    display: flex;
     justify-content: space-between;
     width: 100%;
-    margin:15px 0;
+    margin: 15px 0;
     /* padding-right: 50px; */
 }
-.side-feed{
-    width:50%;
+
+.side-feed {
+    width: 50%;
     padding: 0 2%;
 }
-.search{
+
+.search {
     display: flex;
     height: 55px;
-    max-width:355px;
-    position:sticky;
-    top:0;
+    max-width: 355px;
+    position: sticky;
+    top: 0;
     padding-top: 5px;
 }
-.search input{
+
+.search input {
     background-color: #212327;
     border-radius: 9999px;
     height: 45px;
@@ -151,7 +168,8 @@ main {
     font-size: 1.5rem;
     font-weight: 400px;
 }
-.trending{
+
+.trending {
     background-color: #212327;
     display: flex;
     flex-direction: column;
@@ -159,4 +177,50 @@ main {
     max-width: 355px;
     border-radius: 16px;
     margin-top: 16px;
+}
+
+.trending-title {
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 15px 15px;
+    line-height: 24px;
+}
+
+.trending-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 70px;
+    margin-top: 5px;
+    padding: 0 15px;
+    color: rgb(110, 118, 125);
+    font-size: 1.2rem;
+    font-weight: 600px;
+}
+.item-category{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+.trending p{
+    color:white;
+    font-size: 1.3rem;
+    font-weight: 700;
+}
+.trending-item:hover,.show-more:hover{
+    background-color: #1c1e22;
+    cursor: pointer;
+}
+.show-more{
+    display: flex;
+    align-items: center;
+    color:#1c88d2;
+    font-size: 1.2rem;
+    font-weight: 300;
+    width: 100%;
+    padding: 15px 15px;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+    
 }
